--- a/src/PackMain/FenOption.form
+++ b/src/PackMain/FenOption.form
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="alwaysOnTop" type="boolean" value="true"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -24,12 +25,12 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="labTitre" alignment="0" pref="302" max="32767" attributes="0"/>
+          <Component id="labTitre" alignment="0" max="32767" attributes="0"/>
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jPanel1" max="32767" attributes="0"/>
-                  <Component id="btnValid" max="32767" attributes="0"/>
+                  <Component id="btnValid" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -41,9 +42,9 @@
               <Component id="labTitre" min="-2" pref="44" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="btnValid" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="14" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -61,7 +62,7 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Licence"/>
+        <Property name="text" type="java.lang.String" value="Mail recapitulatif"/>
         <Property name="opaque" type="boolean" value="true"/>
       </Properties>
     </Component>
@@ -77,65 +78,76 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="labActive" max="32767" attributes="0"/>
+                      <Group type="102" alignment="0" attributes="0">
+                          <Component id="cbPop" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                      </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="labLicence" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="labCode" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="cbArchive" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="cbDbExtRecap" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="cbDbExtPlantage" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="cbMailPlantage" alignment="0" min="-2" max="-2" attributes="0"/>
+                              <Component id="cbMailRecap" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="tfCde" max="32767" attributes="0"/>
-                              <Component id="tfLicence" max="32767" attributes="0"/>
-                          </Group>
+                          <EmptySpace min="80" pref="233" max="32767" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="1" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="labActive" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="25" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="labCode" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="tfCde" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="cbPop" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+                  <Component id="cbMailPlantage" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="labLicence" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="tfLicence" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                  <Component id="cbMailRecap" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
+                  <Component id="cbArchive" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="cbDbExtRecap" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="cbDbExtPlantage" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="15" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="labCode">
+        <Component class="javax.swing.JCheckBox" name="cbMailPlantage">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Code PC"/>
+            <Property name="text" type="java.lang.String" value="jCheckBox1"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JLabel" name="labLicence">
+        <Component class="javax.swing.JCheckBox" name="cbMailRecap">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Code Licence"/>
+            <Property name="text" type="java.lang.String" value="jCheckBox1"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="tfLicence">
-        </Component>
-        <Component class="javax.swing.JTextField" name="tfCde">
-        </Component>
-        <Component class="javax.swing.JLabel" name="labActive">
+        <Component class="javax.swing.JCheckBox" name="cbPop">
           <Properties>
-            <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="jLabel4"/>
+            <Property name="text" type="java.lang.String" value="jCheckBox1"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JCheckBox" name="cbArchive">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jCheckBox1"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JCheckBox" name="cbDbExtRecap">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jCheckBox1"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JCheckBox" name="cbDbExtPlantage">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="jCheckBox1"/>
           </Properties>
         </Component>
       </SubComponents>
